# tfgrpoMCP

./: .gitignore  README.md  pyproject.toml  setup.sh
src/: .gitkeep  __init__.py  episode.py  server.py  storage.py  summarizer.py
src/experiences/: exp_20260131_165406.json  exp_20260131_171528.json
tests/: __init__.py
